# gandi-v5

./: .gitignore  CLAUDE.md  PROJECT_SUMMARY.md  README.md  pyproject.toml
.claude/skills/: gandi-api-billing.md  gandi-api-certificate.md  gandi-api-domain.md  gandi-api-email.md  gandi-api-livedns.md  gandi-api-organization.md  gandi-api-webhosting.md
docs/: README.md  authentication.md  billing-api.md  certificate-api.md  changelog.md  cloud-vps-api.md  comment-api.md  domain-api.md  email-api.md  linked-zone-api.md  livedns-api.md  mailbox-api.md  migration.md  organization-api.md  reference.md  template-api.md  webhosting-api.md
skills/: api-reference.md  gandi-api-billing.md  gandi-api-certificate.md  gandi-api-domain.md  gandi-api-email.md  gandi-api-livedns.md  gandi-api-organization.md  gandi-api-webhosting.md  gandi-cli-command-pattern.md
src/gandi_cli/: client.py  config.py  main.py  output.py
src/gandi_cli/commands/: auth.py  certificate.py  dns.py  domain.py  email.py  organization.py
tests/: conftest.py  test_client.py  test_config.py
tests/fixtures/: certificate_detail.json  certificates.json  dcv_params.json  dcv_params_multi.json  dcv_params_strings.json  dns_records.json  domain_check.json  domain_detail.json  domains_list.json  email_forwards.json  issue_response.json  mailboxes.json  organizations.json  reissue_response.json
tests/test_commands/: test_auth.py  test_certificate.py  test_dns.py  test_domain.py  test_email.py  test_organization.py
