[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gandi-cli"
version = "0.1.0"
description = "CLI tool for Gandi.net API"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "platformdirs>=3.0",
    "tomli-w>=1.0",
]

[project.scripts]
gandi = "gandi_cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=4.0",
]
