[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-gandi-cli"
version = "0.1.0"
description = "CLI tool for Gandi.net API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Kyle Lin" }]
keywords = ["gandi", "cli", "domain", "dns"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "platformdirs>=3.0",
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/lyhcode/agent-gandi-cli"
Repository = "https://github.com/lyhcode/agent-gandi-cli"
Issues = "https://github.com/lyhcode/agent-gandi-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gandi_cli"]

[project.scripts]
gandi = "gandi_cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=4.0",
]
